external-crates/move/crates/move-compiler/tests/move_2024/typing/dot_call_no_parameters.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04023]: invalid method call
  ┌─ tests/move_2024/typing/dot_call_no_parameters.move:9:5
  │
6 │ fun h() {}
  │     - The function '0x42::t::h' exists, but it takes no arguments
  ·
9 │     x.h();
  │     ^^^^^ Invalid method call. No known method 'h' on type '0x42::t::X'

error[E04023]: invalid method call
   ┌─ tests/move_2024/typing/dot_call_no_parameters.move:13:5
   │
 6 │ fun h() {}
   │     - The function '0x42::t::h' exists, but it takes no arguments
   ·
13 │     y.x.h();
   │     ^^^^^^^ Invalid method call. No known method 'h' on type '0x42::t::X'
